StratisCore.UI/src/scss/_custom.scss
/* ... */
bs-datepicker-container,
bs-daterangepicker-container {
  z-index: 1080;
}

/* screen size < 1024px */
@media (max-width: 768px) {
  .bs-datepicker-multiple {
    display: flex;
  }
  .bs-datepicker-multiple + .bs-datepicker-multiple {
    margin-top: 10px;
    margin-left: 0;
  }
}

/* theming */
.theme-default .bs-datepicker-head {
  background-color: #777;
}

.theme-default .bs-datepicker-body table td span.selected,
.theme-default .bs-datepicker-body table td.selected span,
.theme-default .bs-datepicker-body table td span[class*="select-"]:after,
.theme-default .bs-datepicker-body table td[class*="select-"] span:after {
  background-color: #777;
}

.theme-default .bs-datepicker-body table td.week span {
  color: #777;
}

.theme-default .bs-datepicker-body table td.active-week span:hover {
  cursor: pointer;
  background-color: #777;
  color: #fff;
  opacity: 0.5;
  transition: 0s;
}

.theme-blue .bs-datepicker-head {
  background-color: #5bc0de;
}

.theme-blue .bs-datepicker-body table td span.selected,
.theme-blue .bs-datepicker-body table td.selected span,
.theme-blue .bs-datepicker-body table td span[class*="select-"]:after,
.theme-blue .bs-datepicker-body table td[class*="select-"] span:after {
  background-color: #5bc0de;
}

.theme-blue .bs-datepicker-body table td.week span {
  color: #5bc0de;
}

.theme-blue .bs-datepicker-body table td.active-week span:hover {
  cursor: pointer;
  background-color: #5bc0de;
  color: #fff;
  opacity: 0.5;
  transition: 0s;
}

.theme-dark-blue .bs-datepicker-head {
  background-color: #337ab7;
}

.theme-dark-blue .bs-datepicker-body table td span.selected,
.theme-dark-blue .bs-datepicker-body table td.selected span,
.theme-dark-blue .bs-datepicker-body table td span[class*="select-"]:after,
.theme-dark-blue .bs-datepicker-body table td[class*="select-"] span:after {
  background-color: #337ab7;
}

.theme-dark-blue .bs-datepicker-body table td.week span {
  color: #337ab7;
}

.theme-dark-blue .bs-datepicker-body table td.active-week span:hover {
  cursor: pointer;
  background-color: #337ab7;
  color: #fff;
  opacity: 0.5;
  transition: 0s;
}

.page-content {
  padding-top: 100px !important;
}


.content {
  position: relative;
  margin-left: 250px;
}

.page-header {
  position: fixed;
  width: 100%;
  background-color: rgba(250, 251, 252, 0.98);
  z-index: 1;
  height: 80px;
  -webkit-box-shadow: 10px 15px 2px -1px rgba(250, 251, 252, 0.8);
}

.page-header-right-content {
  float: right;
  margin-right: 250px;
}

.page-header:after {
  padding-top: 110px;
}

#account-header {
  position: fixed;
  width: 100%;
  background-color: rgba(250, 251, 252, 0.98);
  z-index: 1;
  height: 140px;
  border-radius: 0;
  -webkit-box-shadow: 10px 25px 2px -1px rgba(250, 251, 252, 0.8);
}

.lnr-transaction {
  font-family: 'Linearicons-Free';
  font-size: 1.5em;
  color: rgba(21, 139, 207, 1);
  cursor: pointer;
}

.side-bar-item.selected {
  background-color: rgba(255, 255, 255, 0.4);
  border-radius: 7px 0 0 7px;
}

.floating-button {
  position: fixed;
  border: 2px solid;
  border-radius: 30px;
  width: 40px;
  padding-left: 8px;
  height: 40px;
  cursor: pointer;
  color: rgba(21, 139, 207, 0.6);
  z-index: 2;
  font-size: 1.7em;
  padding-top: 4px;
}

.logout-button {
  @extend .floating-button;
  top: 10px;
  right: 15px;
}

.new-contact-button {
  @extend .floating-button;
  width: 50px;
  height: 50px;
  font-size: 1.9rem;
  padding-top: 7px;
  bottom: 15px;
  right: calc(50% - 150px);
  background-color: rgba(250, 251, 252, 0.96);
}

.floating-button:hover {
  background-color: rgba(21, 139, 207, 1);
  color: rgba(250, 251, 252, 0.8);
  transition-duration: 0.25s;
}

.loading-snack-bar:before {
  content: '';
  margin-top: 50px;
  left: 35%;
  position: relative;
  display: block;
  width: 30px;
  height: 30px;
  opacity: .75;
  border-radius: 100%;
  background: rgba(21, 139, 207, 0.8) url("/assets/images/loading.svg") no-repeat center;
  -webkit-animation: scaleout 1.5s infinite ease-in-out;
  animation: scaleout 1.5s infinite ease-in-out;
}

.status-tooltip {
  color: white;
  font-size: 0.8rem;

  .tooltip-inner {
    background: rgb(21, 139, 207);
    border: 1px solid white;
  }

  margin-left: 25px;
}

.status-tooltip.arrow::before {
  border-top-color: rgb(21, 139, 207);
}

.notify-snack-bar {
  position: fixed;
  bottom: 0;
  z-index: 1;
  height: 80px;
  width: 100%;
  font-size: 20px;
  text-align: center;
  padding-top: 20px;
  padding-right: 300px;
  color: white;
  margin-left: 250px;
  padding-left: 50px;
  background: rgb(21, 139, 207);
  opacity: 0.8;
  transition: opacity .25s ease-in-out;
  -moz-transition: opacity .25s ease-in-out;
  -webkit-transition: opacity .25s ease-in-out;
}

.loading-snack-bar {
  position: fixed;
  bottom: 0;
  z-index: 1;
  height: 130px;
  width: 100%;
  font-size: 20px;
  color: white;
  margin-left: 250px;
  padding-left: 50px;
  background: rgba(255, 255, 255, 0.8)
}

.page-load:before {
  content: '';
  position: absolute;
  top: 40%;
  left: calc(50% - 35px);
  width: 70px;
  height: 70px;
  opacity: .75;
  border-radius: 100%;
  background: rgba(21, 139, 207, 0.8) url(/assets/images/loading.svg) no-repeat center;
  -webkit-animation: scaleout 1.5s infinite ease-in-out;
  animation: scaleout 1.5s infinite ease-in-out;
}

.page-load {
  position: fixed;
  top: 0;
  left: 250px;
  width: calc(100% - 250px);
  height: 100%;
  background-color: rgba(255, 255, 255, 0.7);
  z-index: 100;
}

app-wallet-selector {
  margin-bottom: 20px;
  color: white;

  .btn {
    background-color: transparent;
    border: 1px solid white;
    width: 220px;
    height: 40px;
    color: white;
    margin-left: -25px;
    font-size: 1em;
    margin-bottom: 20px;
  }

  .btn.dropdown-toggle:after {
    float: right;
    margin-top: 10px;
  }
}
/* ... */

